reversing small change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: index
 			</svg>
 		</a>
 		<h1 class="caps lt-5 w-700 hero--headline">Viewsources</h1>
-		<h2 class="w-400 hero--sub">nother Podcast About Front-End Development &amp; Web Design</h2>
+		<h2 class="w-400 hero--sub">Another Podcast About Front-End Development &amp; Web Design</h2>
 	</div>
 </header>
 <aside class="flex--child_1 flex--container flex--container_col bkg-yellow">
