adding feedburner URL

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: index
     <p class="content--larger">Want us to answer one of your questions about Front-End Development or Web Design? Because we will. Right now we'd love to help people understand JavaScript MVC applications, using SVG, working with Object Oriented CSS and Sass (especially LibSass). So if you have a question related to that, please submit it because you're amazing.</p>
   </div>
   <div class="flex--child_v3 v-center content bkg--green_dark">
-    <a href="{{ '/feed.xml' | site.url }}" class="social--link flex--container items-center h-center">
+    <a href="http://feeds.feedburner.com/ViewsourcesPodcast?format=xml" class="social--link flex--container items-center h-center">
       <svg class="icon">
         <use xlink:href="#icon-social_rss" />
       </svg>
